--- a/pkg/weather/DESCRIPTION
+++ b/pkg/weather/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: climate
+Package: weather
 Type: Package
-Title: Climate data manipulation
+Title: Weather data manipulation
 Version: 0.1
 Date: 2008-01-17
 Depends: methods
