--- a/pkg/cropsim/DESCRIPTION
+++ b/pkg/cropsim/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Simulation modeling of crops and their diseases
 Version: 0.1-2
 Date: 2008-10-17
-Depends: methods, raster, RODBC
+Depends: methods
 Author: Robert J. Hijmans, Serge Savary, Rene Pangga
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
