--- a/pkg/weather/DESCRIPTION
+++ b/pkg/weather/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Weather data manipulation
 Version: 0.1
 Date: 2008-01-17
-Depends: methods
+Depends: methods, raster, RODBC
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
