--- a/pkg/cropsim/DESCRIPTION
+++ b/pkg/cropsim/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: cropsim
 Type: Package
 Title: Simulation modeling of crops and their diseases
-Version: 0.1-2
-Date: 2008-10-17
+Version: 0.1-3
+Date: 2009-5-15
 Depends: methods, weather
-Author: Robert J. Hijmans, Serge Savary, Rene Pangga
+Author: Robert J. Hijmans, Serge Savary, Rene Pangga, Jorrell Aunario
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
 License: GPL3
