git-svn-id: svn://svn.r-forge.r-project.org/svnroot/cropsim@94 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/cropsim/DESCRIPTION
+++ b/pkg/cropsim/DESCRIPTION
@@ -7,5 +7,5 @@ Depends: methods, weather
 Author: Robert J. Hijmans, Serge Savary, Rene Pangga, Jorrell Aunario
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
-License: GPL3
+License: GPL (>=3)
 LazyLoad: yes
