--- a/pkg/weather/DESCRIPTION
+++ b/pkg/weather/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: weather
 Type: Package
 Title: Weather data manipulation
-Version: 0.1
-Date: 2009-09-27
+Version: 0.2
+Date: 20-November-2009
 Depends: methods, raster
 Suggests: RODBC
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
-License: GPL3
+License: GPL (>=3)
 LazyLoad: yes
