disease functions return SEIR output, optimized spatSimFlex adopts SEIR syntax
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/cropsim@103 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/weather/DESCRIPTION
+++ b/pkg/weather/DESCRIPTION
@@ -8,5 +8,5 @@ Suggests: RODBC
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
-License: GPL (>=3)
+License: GPL-3
 LazyLoad: yes
