--- a/pkg/cropsim/DESCRIPTION
+++ b/pkg/cropsim/DESCRIPTION
@@ -4,8 +4,8 @@ Title: Simulation modeling of crops and their diseases
 Version: 0.2.0-0
 Date: 2009-9-27
 Depends: methods, weather
-Author: Robert J. Hijmans, Serge Savary, Rene Pangga, Jorrell Aunario
+Author: Robert J. Hijmans, Serge Savary, Rene Pangga, Jorrel Aunario
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
-License: GPL (>=3)
+License: GPL-3
 LazyLoad: yes
