--- a/pkg/cropsim/DESCRIPTION
+++ b/pkg/cropsim/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Simulation modeling of crops and their diseases
 Version: 0.2.0-0
 Date: 2009-9-27
-Depends: methods, weather
+Depends: methods, raster, weather
 Author: Robert J. Hijmans, Serge Savary, Rene Pangga, Jorrel Aunario
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: nothing much so far
